cluster/default/syno/svc.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/yannh/kubernetes-json-schema/master/master/service-v1.json

apiVersion: v1
kind: Service
metadata:
  name: syno
spec:
  ports:
    - port: 80
  clusterIP: None
  type: ClusterIP
---
apiVersion: v1
kind: Endpoints
metadata:
  name: syno
subsets:
  - addresses:
      - ip: 192.168.1.108
    ports:
      - port: 80
