cluster/default/syno/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: syno
spec:
  ingressClassName: haproxy-external
  rules:
  - host: syno.sko.ai
    http:
      paths:
      - path: /.well-known/acme-challenge/
        pathType: Prefix
        backend: &backend
          service:
            name: syno
            port:
              number: 80
      - path: /photos/mo/sharing
        pathType: Prefix
        backend: *backend
