cluster/default/syno/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: syno
spec:
  parentRefs:
    - name: public
      namespace: agentgateway
  hostnames:
    - syno.sko.ai
  rules:
    - matches:
      - path:
          type: PathPrefix
          value: /
      backendRefs:
        - name: syno
          port: 80
          weight: 1
